# equipcost-forecast

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_data.py
src/equipcost_forecast/: __init__.py  __main__.py  cli.py
src/equipcost_forecast/api/: dependencies.py  main.py
src/equipcost_forecast/api/routes/: equipment.py  financial.py  fleet.py  forecasts.py
src/equipcost_forecast/config/: __init__.py  settings.py
src/equipcost_forecast/dashboard/: app.py
src/equipcost_forecast/financial/: depreciation.py  npv_analyzer.py  replacement_optimizer.py  tco_calculator.py
src/equipcost_forecast/forecasting/: bathtub_curve.py  cost_aggregator.py  maintenance_predictor.py  time_series.py
src/equipcost_forecast/ingestion/: contract_loader.py  equipment_loader.py  work_order_loader.py
src/equipcost_forecast/models/: __init__.py  database.py  orm.py  schemas.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_cli.py  test_config.py  test_cost_aggregator.py  test_database.py  test_depreciation.py  test_ingestion.py  test_npv.py  test_replacement_optimizer.py  test_tco.py  test_time_series.py
